# simple-image-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
.run/: SimpleImageService.run.xml
app/: boto_s3.py  database.py  logging.py  main.py  schema.py  security.py  utils.py
app/auth/: cloudflare.py
app/static/: prose.css  tailwind-preflight.css
app/templates/: index.html
config/: post_allowlist.example.json
