[project]
name = "simple-image-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "boto3>=1.38.31",
    "boto3-stubs==1.38.31",
    "cryptography>=45.0.3",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
noavif = [
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.38.31",
    "ruff>=0.11.13",
    "types-boto3[essential]>=1.38.35",
]
